--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title> FALCON | Contact Us</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style3.css"
+    <link rel="stylesheet" type="text/css" href="css/style3.css"
 
 <body>
     <header>
