--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <title> FALCON | login</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style7.css"
+    <link rel="stylesheet" type="text/css" href="css/style7.css"
 
 
     <img src="login.png" alt="Avatar" class="avatar">
