--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <title> FALCON | News</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style5.css"
+    <link rel="stylesheet" type="text/css" href="css/style5.css"
 
 <body>
     <header>
