--- a/staff.html
+++ b/staff.html
@@ -4,7 +4,7 @@
     <title> FALCON | Staff</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style9.css"
+    <link rel="stylesheet" type="text/css" href="css/style9.css"
 
 <body>
     <header>
