--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <title> FALCON | About Us</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style2.css"
+    <link rel="stylesheet" type="text/css" href="css/style2.css"
 
 <body>
     <header>
