--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <title> FALCON | Map</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="css/style.css"
 
 <body>
     <header>
