--- a/parents.html
+++ b/parents.html
@@ -4,7 +4,7 @@
     <title> FALCON | Parents</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style4.css"
+    <link rel="stylesheet" type="text/css" href="css/style4.css"
 
 <body>
     <header>
