--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
     <title> FALCON | Resources</title>
 </head>
 
-    <link rel="stylesheet" type="text/css" href="style6.css"
+    <link rel="stylesheet" type="text/css" href="css/style6.css"
 
 <body>
     <header>
